# cloudach

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENGINEERING.md  README.md  RUNBOOK.md  api-contracts.json  docker-compose.yml  next.config.js  package-lock.json  package.json  playwright.config.ts
cli/: cloudach.js  package.json
components/: AnnouncementBar.jsx  DeployAnimation.jsx  DocsLayout.jsx  Features.jsx  Footer.jsx  Hero.jsx  HeroParticles.jsx  LanguageSwitcher.jsx  Logo.jsx  ModelTicker.jsx  Models.jsx  Nav.jsx  Pricing.jsx  SearchModal.jsx  TutorialLayout.jsx
design/: DASHBOARD_AUDIT.md  DESIGN_SYSTEM.md  ONBOARDING_FLOW.md
docs/: CHANGELOG-PROCESS.md  README.md  ROADMAP.md  api-versioning.md  audit-log.md  authentication.md  autoscaling-policies.md  batch-api.md  batch-inference-pricing.md  benchmark-report-2026-04.md  blog-llama3-vs-mistral-vs-mixtral.md  cost-model.md  cost-optimization-guide.md  data-preparation.md  developer-pain-points.md  errors.md  fine-tuning.md  incident-response-runbook.md  model-selection-guide.md  models.md  multi-region-architecture.md  pricing-strategy.md  quickstart.md  rate-limits.md  security-baseline.md  spot-instance-strategy.md
e2e/: README.md  api-gateway.spec.ts  api-keys.spec.ts  auth.spec.ts  homepage.spec.ts  (+2 more)
sdk/python/: README.md  pyproject.toml
sdk/python/cloudach/: __init__.py  _client.py  _exceptions.py
sdk/python/cloudach/resources/: __init__.py  models.py
sdk/python/cloudach/resources/chat/: __init__.py  completions.py
sdk/python/cloudach/types/: __init__.py  chat_completion.py  model.py
(+314 files in other folders)
